[admin-page] add final controllers & routers

--- a/admin-page/views/common/sidebar.ejs
+++ b/admin-page/views/common/sidebar.ejs
@@ -1,72 +1,83 @@
 <!-- Left side column. contains the logo and sidebar -->
 <aside class="main-sidebar">
-    <!-- sidebar: style can be found in sidebar.less -->
-    <section class="sidebar">
-      <!-- Sidebar user panel -->
-      <div class="user-panel">
-        <div class="pull-left image">
-          <img src="dist/img/admin_160x160.jpg" class="img-circle" alt="User Image">
-        </div>
-        <div class="pull-left info">
-          <p>Admin</p>
-          <a href="#"><i class="fa fa-circle text-success"></i> Đang Hoạt Động</a>
-        </div>
+  <!-- sidebar: style can be found in sidebar.less -->
+  <section class="sidebar">
+    <!-- Sidebar user panel -->
+    <div class="user-panel">
+      <div class="pull-left image">
+        <img src="dist/img/admin_160x160.jpg" class="img-circle" alt="User Image">
       </div>
-      <!-- search form -->
-      <form action="#" method="get" class="sidebar-form">
-        <div class="input-group">
-          <input type="text" name="q" class="form-control" placeholder="Search...">
-          <span class="input-group-btn">
-                <button type="submit" name="search" id="search-btn" class="btn btn-flat">
-                  <i class="fa fa-search"></i>
-                </button>
+      <div class="pull-left info">
+        <p>Admin</p>
+        <a href="#"><i class="fa fa-circle text-success"></i> Đang Hoạt Động</a>
+      </div>
+    </div>
+    <!-- search form -->
+    <form action="#" method="get" class="sidebar-form">
+      <div class="input-group">
+        <input type="text" name="q" class="form-control" placeholder="Search...">
+        <span class="input-group-btn">
+          <button type="submit" name="search" id="search-btn" class="btn btn-flat">
+            <i class="fa fa-search"></i>
+          </button>
+        </span>
+      </div>
+    </form>
+    <!-- /.search form -->
+    <!-- sidebar menu: : style can be found in sidebar.less -->
+    <ul class="sidebar-menu" data-widget="tree">
+      <li class="header">BẢNG ĐIỀU KHIỂN</li>
+
+      <li class="treeview">
+        <a href="#">
+          <i class="fa fa-pie-chart"></i> <span>Thống Kê</span>
+          <span class="pull-right-container">
+            <i class="fa fa-angle-left pull-right"></i>
+          </span>
+        </a>
+        <ul class="treeview-menu">
+
+          <li>
+            <a href="/chart"><i class="fa fa-pie-chart"></i> Doanh Thu
+              <span class="pull-right-container">
               </span>
-        </div>
-      </form>
-      <!-- /.search form -->
-      <!-- sidebar menu: : style can be found in sidebar.less -->
-      <ul class="sidebar-menu" data-widget="tree">
-        <li class="header">BẢNG ĐIỀU KHIỂN</li>
-        
-        <li class="treeview">
-          <a href="#" onclick="showSummary();return false;">
-            <i class="fa fa-pie-chart"></i>
-            <span>Thống Kê</span>
-          </a>
-        </li>
-        
-        <li class="treeview">
-          <a href="#">
-            <i class="fa fa-cogs"></i> <span>Quản Lý</span>
-            <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
-          </a>
-          <ul class="treeview-menu">
-            
-            <li>
-              <a href="#" onclick="showUsers();return false;"><i class="fa fa-users"></i> Người Dùng
-                <span class="pull-right-container">
-                
-                </span>
-              </a>
-            
-            </li>
-            <li class="treeview">
-                <a href="#"><i class="fa fa-shopping-cart"></i> Cửa Hàng
-                  <span class="pull-right-container">
-                    <i class="fa fa-angle-left pull-right"></i>
-                  </span>
-                </a>
-                <ul class="treeview-menu">
-                  <li><a href="#" onclick="showProducts();return false;"><i class="fa fa-shopping-cart"></i>Gian Hàng & Sản Phẩm</a></li>             
-                  <li><a href="#" onclick="showListOrders();return false;"><i class="fa fa-copy"></i> Tình Trạng Đơn Hàng</a></li>
-                </ul>
-              </li>
-          </ul>
-        </li>
-        
-      </ul>
-    </section>
-    <!-- /.sidebar -->
-  </aside>
+            </a>
+          </li>
+        </ul>
+      </li>
+
+      <li class="treeview">
+        <a href="#">
+          <i class="fa fa-cogs"></i> <span>Quản Lý</span>
+          <span class="pull-right-container">
+            <i class="fa fa-angle-left pull-right"></i>
+          </span>
+        </a>
+        <ul class="treeview-menu">
+
+          <li>
+            <a href="/user"><i class="fa fa-users"></i> Người Dùng
+              <span class="pull-right-container">
+
+              </span>
+            </a>
+
+          </li>
+          <li class="treeview">
+            <a href="#"><i class="fa fa-shopping-cart"></i> Cửa Hàng
+              <span class="pull-right-container">
+                <i class="fa fa-angle-left pull-right"></i>
+              </span>
+            </a>
+            <ul class="treeview-menu">
+              <li><a href="/product"><i class="fa fa-shopping-cart"></i>Gian Hàng & Sản Phẩm</a></li>
+              <li><a href="/order"><i class="fa fa-copy"></i> Tình Trạng Đơn Hàng</a></li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+
+    </ul>
+  </section>
+  <!-- /.sidebar -->
+</aside>
