apply MVC to source code

--- a/main-page/views/my_account.ejs
+++ b/main-page/views/my_account.ejs
@@ -4,13 +4,13 @@
   <body>
   <!-- catg header banner section -->
   <section id="aa-catg-head-banner">
-    <img src="img/fashion/fashion-header-bg-8.jpg" alt="fashion img">
+    <img src="../img/fashion/fashion-header-bg-8.jpg" alt="fashion img">
     <div class="aa-catg-head-banner-area">
      <div class="container">
       <div class="aa-catg-head-banner-content">
         <h2>Trang tài khoản</h2>
         <ol class="breadcrumb">
-          <li><a href="index.html">Trang chủ</a></li>                   
+          <li><a href="/">Trang chủ</a></li>                   
           <li class="active">Tài khoản</li>
         </ol>
       </div>
@@ -58,22 +58,5 @@
      </div>
    </div>
  </section>
- <!-- / Cart view section -->
- <div class="modal fade" id="login-modal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">                      
-        <div class="modal-body">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4>Xác minh tài khoản</h4>
-          <form class="aa-login-form" action="" height="50px">
-            <label for="">Tài khoản hoặc Email<span>*</span></label>
-            <input type="text" placeholder="Username or email">
-            
-          </form>
-          <button class="aa-browse-btn" type="submit">Xác minh</button>
-        </div>                        
-      </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-  </div> 
+ 
   </body>
-</html>
