--- a/main-page/views/order_detail.ejs
+++ b/main-page/views/order_detail.ejs
@@ -19,11 +19,11 @@
                 <tbody>
                     <tr>
                         <td>
-                            <a href="ProductDetail">
+                            <a href="/products/detail?id=1">
                                 <img src="/img/t-shirt/8.jpg" alt="White Blouse Armani">
                             </a>
                         </td>
-                        <td><a href="ProductDetail">Áo thun KiriMaru</a>
+                        <td><a href="/products/detail?id=1">Áo thun KiriMaru</a>
                         </td>
                         <td>2</td>
                         <td>150.000 VNĐ</td>
