--- a/main-page/views/product.ejs
+++ b/main-page/views/product.ejs
@@ -241,12 +241,12 @@
                    <div class="aa-sidebar-widget">
                      <h3>Mục</h3>
                      <ul class="aa-catg-nav">
-                       <li><a href="#">Áo thun</a></li>
-                       <li><a href="">Áo khoác</a></li>
-                       <li><a href="">Áo sơ mi</a></li>
-                       <li><a href="">Quần</a></li>
-                       <li><a href="">Giày</a></li>
-                       <li><a href="">Balo</a></li>
+                       <li><a href="/products/type?id=1">Áo thun</a></li>
+                       <li><a href="/products/type?id=1">Áo khoác</a></li>
+                       <li><a href="/products/type?id=1">Áo sơ mi</a></li>
+                       <li><a href="/products/type?id=1">Quần</a></li>
+                       <li><a href="/products/type?id=1">Giày</a></li>
+                       <li><a href="/products/type?id=1">Balo</a></li>
                      </ul>
                    </div>
                    <!-- single sidebar -->
