--- a/main-page/views/product_detail.ejs
+++ b/main-page/views/product_detail.ejs
@@ -1,6 +1,6 @@
 <!-- catg header banner section -->
 <section id="aa-catg-head-banner">
-    <img src="img/fashion/fashion-header-bg-8.jpg" alt="fashion img">
+    <img src="../img/fashion/fashion-header-bg-8.jpg" alt="fashion img">
     <div class="aa-catg-head-banner-area">
       <div class="container">
        <div class="aa-catg-head-banner-content">
@@ -29,7 +29,7 @@
                    <div class="aa-product-view-slider">                                
                      <div id="demo-1" class="simpleLens-gallery-container">
                        <div class="simpleLens-container">
-                         <div class="simpleLens-big-image-container"><a data-lens-image="img/view-slider/large/8.jpg" class="simpleLens-lens-image"><img src="img/t-shirt/8.jpg" class="simpleLens-big-image"></a></div>
+                         <div class="simpleLens-big-image-container"><a data-lens-image="../img/view-slider/large/8.jpg" class="simpleLens-lens-image"><img src="../img/t-shirt/8.jpg" class="simpleLens-big-image"></a></div>
                        </div>
                      </div>
                    </div>
@@ -74,7 +74,7 @@
                        </p>
                      </div>
                      <div class="aa-prod-view-bottom">
-                       <a class="aa-add-to-cart-btn" href="#">Add To Cart</a>
+                       <a class="aa-add-to-cart-btn" href="#">Thêm vào giỏ hàng</a>
                      </div>
                    </div>
                  </div>
@@ -107,7 +107,7 @@
                          <div class="media">
                            <div class="media-left">
                              <a href="#">
-                               <img class="media-object" src="img/testimonial-img-3.jpg" alt="girl image">
+                               <img class="media-object" src="../img/testimonial-img-3.jpg" alt="girl image">
                              </a>
                            </div>
                            <div class="media-body">
@@ -127,7 +127,7 @@
                          <div class="media">
                            <div class="media-left">
                              <a href="#">
-                               <img class="media-object" src="img/testimonial-img-3.jpg" alt="girl image">
+                               <img class="media-object" src="../img/testimonial-img-3.jpg" alt="girl image">
                              </a>
                            </div>
                            <div class="media-body">
@@ -181,7 +181,7 @@
                  <!-- start single product item -->
                  <li>
                     <figure>
-                        <a class="aa-product-img" href="#"><img src="/img/t-shirt/T-Shirt-U.jpg" alt="polo shirt img"></a>
+                        <a class="aa-product-img" href="#"><img src="../img/t-shirt/T-Shirt-U.jpg" alt="polo shirt img"></a>
                         <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Thêm vào giỏ hàng</a>
                           <figcaption>
                           <h4 class="aa-product-title"><a href="ProductDetail">Áo Thun U Y2010 Basic A01</a></h4>
@@ -189,7 +189,7 @@
                         </figcaption>
                       </figure>                        
                       <div class="aa-product-hvr-content">
-                        <a href="#" data-toggle2="tooltip" data-placement="top" title="Quick View" onclick="clickSearch('/img/t-shirt/T-Shirt-U.jpg')" data-toggle="modal" data-target="#quick-view-modal"><span class="fa fa-search"></span></a>                          
+                        <a href="#" data-toggle2="tooltip" data-placement="top" title="Quick View" onclick="clickSearch('../img/t-shirt/T-Shirt-U.jpg')" data-toggle="modal" data-target="#quick-view-modal"><span class="fa fa-search"></span></a>                          
                       </div>
                       <!-- product badge -->
                       <span class="aa-badge aa-sale" href="#">SALE!</span>
@@ -197,7 +197,7 @@
                     <!-- start single product item -->
                     <li>
                       <figure>
-                        <a class="aa-product-img" href="#"><img src="/img/t-shirt/T-Shirt- KiriMaru.jpg" alt="polo shirt img"></a>
+                        <a class="aa-product-img" href="#"><img src="../img/t-shirt/T-Shirt- KiriMaru.jpg" alt="polo shirt img"></a>
                         <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Thêm vào giỏ hàng</a>
                          <figcaption>
                           <h4 class="aa-product-title"><a href="ProductDetail">Áo Thun Nam KiriMaru Basic ST51</a></h4>
@@ -205,7 +205,7 @@
                         </figcaption>
                       </figure>                         
                       <div class="aa-product-hvr-content">
-                        <a href="#" data-toggle2="tooltip" data-placement="top" title="Quick View" onclick="clickSearch('/img/t-shirt/T-Shirt- KiriMaru.jpg')" data-toggle="modal" data-target="#quick-view-modal"><span class="fa fa-search"></span></a>
+                        <a href="#" data-toggle2="tooltip" data-placement="top" title="Quick View" onclick="clickSearch('../img/t-shirt/T-Shirt- KiriMaru.jpg')" data-toggle="modal" data-target="#quick-view-modal"><span class="fa fa-search"></span></a>
                       </div>
                       <!-- product badge -->
                        <span class="aa-badge aa-sold-out" href="#">Hết hàng!</span>
@@ -213,7 +213,7 @@
                     <!-- start single product item -->
                     <li>
                       <figure>
-                        <a class="aa-product-img" href="#"><img src="/img/t-shirt/T-Shirt- KiriMaru-2.jpg" alt="polo shirt img"></a>
+                        <a class="aa-product-img" href="#"><img src="../img/t-shirt/T-Shirt- KiriMaru-2.jpg" alt="polo shirt img"></a>
                         <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Thêm vào giỏ hàng</a>
                          <figcaption>
                           <h4 class="aa-product-title"><a href="ProductDetail">Áo Thun Nam KiriMaru Basic EM04</a></h4>
@@ -221,13 +221,13 @@
                         </figcaption>
                       </figure>                         
                       <div class="aa-product-hvr-content">
-                        <a href="#" data-toggle2="tooltip" data-placement="top" title="Quick View" onclick="clickSearch('/img/t-shirt/T-Shirt- KiriMaru-2.jpg')" data-toggle="modal" data-target="#quick-view-modal"><span class="fa fa-search"></span></a>
+                        <a href="#" data-toggle2="tooltip" data-placement="top" title="Quick View" onclick="clickSearch('../img/t-shirt/T-Shirt- KiriMaru-2.jpg')" data-toggle="modal" data-target="#quick-view-modal"><span class="fa fa-search"></span></a>
                       </div>
                     </li>
                     <!-- start single product item -->
                     <li>
                             <figure>
-                              <a class="aa-product-img" href="#"><img src="/img/t-shirt/T-Shirt- KiriMaru-2.jpg" alt="polo shirt img"></a>
+                              <a class="aa-product-img" href="#"><img src="../img/t-shirt/T-Shirt- KiriMaru-2.jpg" alt="polo shirt img"></a>
                               <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Thêm vào giỏ hàng</a>
                                <figcaption>
                                 <h4 class="aa-product-title"><a href="ProductDetail">Áo Thun Nam KiriMaru Basic EM04</a></h4>
@@ -235,7 +235,7 @@
                               </figcaption>
                             </figure>                         
                             <div class="aa-product-hvr-content">
-                              <a href="#" data-toggle2="tooltip" data-placement="top" title="Quick View" onclick="clickSearch('/img/t-shirt/T-Shirt- KiriMaru-2.jpg')" data-toggle="modal" data-target="#quick-view-modal"><span class="fa fa-search"></span></a>
+                              <a href="#" data-toggle2="tooltip" data-placement="top" title="Quick View" onclick="clickSearch('../img/t-shirt/T-Shirt- KiriMaru-2.jpg')" data-toggle="modal" data-target="#quick-view-modal"><span class="fa fa-search"></span></a>
                             </div>
                       <!-- product badge -->
                       <span class="aa-badge aa-hot" href="#">HOT!</span>
@@ -243,7 +243,7 @@
                     <!-- start single product item -->
                     <li>
                             <figure>
-                              <a class="aa-product-img" href="#"><img src="/img/t-shirt/T-Shirt- KiriMaru-2.jpg" alt="polo shirt img"></a>
+                              <a class="aa-product-img" href="#"><img src="../img/t-shirt/T-Shirt- KiriMaru-2.jpg" alt="polo shirt img"></a>
                               <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Thêm vào giỏ hàng</a>
                                <figcaption>
                                 <h4 class="aa-product-title"><a href="ProductDetail">Áo Thun Nam KiriMaru Basic EM04</a></h4>
@@ -251,13 +251,13 @@
                               </figcaption>
                             </figure>                         
                             <div class="aa-product-hvr-content">
-                              <a href="#" data-toggle2="tooltip" data-placement="top" title="Quick View" onclick="clickSearch('/img/t-shirt/T-Shirt- KiriMaru-2.jpg')" data-toggle="modal" data-target="#quick-view-modal"><span class="fa fa-search"></span></a>
+                              <a href="#" data-toggle2="tooltip" data-placement="top" title="Quick View" onclick="clickSearch('../img/t-shirt/T-Shirt- KiriMaru-2.jpg')" data-toggle="modal" data-target="#quick-view-modal"><span class="fa fa-search"></span></a>
                             </div>
                     </li>
                     <!-- start single product item -->
                     <li>
                             <figure>
-                              <a class="aa-product-img" href="#"><img src="/img/t-shirt/T-Shirt- KiriMaru-2.jpg" alt="polo shirt img"></a>
+                              <a class="aa-product-img" href="#"><img src="../img/t-shirt/T-Shirt- KiriMaru-2.jpg" alt="polo shirt img"></a>
                               <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Thêm vào giỏ hàng</a>
                                <figcaption>
                                 <h4 class="aa-product-title"><a href="ProductDetail">Áo Thun Nam KiriMaru Basic EM04</a></h4>
@@ -265,13 +265,13 @@
                               </figcaption>
                             </figure>                         
                             <div class="aa-product-hvr-content">
-                              <a href="#" data-toggle2="tooltip" data-placement="top" title="Quick View" onclick="clickSearch('/img/t-shirt/T-Shirt- KiriMaru-2.jpg')" data-toggle="modal" data-target="#quick-view-modal"><span class="fa fa-search"></span></a>
+                              <a href="#" data-toggle2="tooltip" data-placement="top" title="Quick View" onclick="clickSearch('../img/t-shirt/T-Shirt- KiriMaru-2.jpg')" data-toggle="modal" data-target="#quick-view-modal"><span class="fa fa-search"></span></a>
                             </div>
                           </li>
                     <!-- start single product item -->
                     <li>
                             <figure>
-                              <a class="aa-product-img" href="#"><img src="/img/t-shirt/T-Shirt- KiriMaru-2.jpg" alt="polo shirt img"></a>
+                              <a class="aa-product-img" href="#"><img src="../img/t-shirt/T-Shirt- KiriMaru-2.jpg" alt="polo shirt img"></a>
                               <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Thêm vào giỏ hàng</a>
                                <figcaption>
                                 <h4 class="aa-product-title"><a href="ProductDetail">Áo Thun Nam KiriMaru Basic EM04</a></h4>
@@ -279,13 +279,13 @@
                               </figcaption>
                             </figure>                         
                             <div class="aa-product-hvr-content">
-                              <a href="#" data-toggle2="tooltip" data-placement="top" title="Quick View" onclick="clickSearch('/img/t-shirt/T-Shirt- KiriMaru-2.jpg')" data-toggle="modal" data-target="#quick-view-modal"><span class="fa fa-search"></span></a>
+                              <a href="#" data-toggle2="tooltip" data-placement="top" title="Quick View" onclick="clickSearch('../img/t-shirt/T-Shirt- KiriMaru-2.jpg')" data-toggle="modal" data-target="#quick-view-modal"><span class="fa fa-search"></span></a>
                             </div>
                           </li>
                     <!-- start single product item -->
                     <li>
                             <figure>
-                              <a class="aa-product-img" href="#"><img src="/img/t-shirt/T-Shirt- KiriMaru-2.jpg" alt="polo shirt img"></a>
+                              <a class="aa-product-img" href="#"><img src="../img/t-shirt/T-Shirt- KiriMaru-2.jpg" alt="polo shirt img"></a>
                               <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Thêm vào giỏ hàng</a>
                                <figcaption>
                                 <h4 class="aa-product-title"><a href="ProductDetail">Áo Thun Nam KiriMaru Basic EM04</a></h4>
@@ -293,7 +293,7 @@
                               </figcaption>
                             </figure>                         
                             <div class="aa-product-hvr-content">
-                              <a href="#" data-toggle2="tooltip" data-placement="top" title="Quick View" onclick="clickSearch('/img/t-shirt/T-Shirt- KiriMaru-2.jpg')" data-toggle="modal" data-target="#quick-view-modal"><span class="fa fa-search"></span></a>
+                              <a href="#" data-toggle2="tooltip" data-placement="top" title="Quick View" onclick="clickSearch('../img/t-shirt/T-Shirt- KiriMaru-2.jpg')" data-toggle="modal" data-target="#quick-view-modal"><span class="fa fa-search"></span></a>
                             </div>
                           
                       <!-- product badge -->
