--- a/main-page/public/stylesheets/style.css
+++ b/main-page/public/stylesheets/style.css
@@ -1030,15 +1030,19 @@ img {
 #aa-product .aa-product-area .aa-product-inner .aa-product-catg {
   float: left;
 }
-#aa-product .aa-product-area .aa-product-inner #men {
+#aa-product .aa-product-area .aa-product-inner #shirt {
   text-align: center;
   padding-bottom: 35px;
 }
-#aa-product .aa-product-area .aa-product-inner #electronics {
+#aa-product .aa-product-area .aa-product-inner #bags {
   text-align: center;
   padding-bottom: 35px;
 }
-#aa-product .aa-product-area .aa-product-inner #women {
+#aa-product .aa-product-area .aa-product-inner #pants {
+  text-align: center;
+  padding-bottom: 35px;
+}
+#aa-product .aa-product-area .aa-product-inner #shoes {
   text-align: center;
   padding-bottom: 35px;
 }
