--- a/main-page/views/header.ejs
+++ b/main-page/views/header.ejs
@@ -84,7 +84,7 @@
                       </span>
                     </li>
                   </ul>
-                  <a class="aa-cartbox-checkout aa-primary-btn" href="Checkout">Thanh toán</a>
+                  <a class="aa-cartbox-checkout aa-primary-btn" href="/check-out">Thanh toán</a>
                 </div>
               </div>
               <!-- / cart box -->
