--- a/main-page/views/Checkout.ejs
+++ b/main-page/views/Checkout.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <body>    
- 
+  <!-- catg header banner section -->
   <!-- catg header banner section -->
   <section id="aa-catg-head-banner">
     <img src="img/fashion/fashion-header-bg-8.jpg" alt="fashion img">
