--- a/main-page/views/layout.ejs
+++ b/main-page/views/layout.ejs
@@ -54,8 +54,8 @@
 
 
  
-  <% include header %>
-  <% include menu %>
+  <% include ./common/header %>
+  <% include ./common/menu %>
 
   <%- body %>
    
