create model for product and category

--- a/main-page/views/common/header.ejs
+++ b/main-page/views/common/header.ejs
@@ -18,7 +18,7 @@
               <!-- / header top left -->
               <div class="aa-header-top-right">
                 <ul class="aa-head-top-nav-right">
-                  <li><a href="user/detailUser?id=1">Tài khoản của tôi</a></li>
+                  <li><a href="/user/detailUser?id=1">Tài khoản của tôi</a></li>
                   <li><a href="/order/list">Đơn hàng của tôi</a></li>
                   <li class="hidden-xs"><a href="/my-cart">Giỏ hàng</a></li>
                   <li class="hidden-xs"><a href="/check-out">Thanh toán</a></li>
