--- a/main-page/views/product/product.ejs
+++ b/main-page/views/product/product.ejs
@@ -32,7 +32,7 @@
                               <a class="aa-product-img" href="#"><img id="imgsrc1" src="/img/coat/coat1.jpg" alt="polo shirt img"></a>
                               <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Thêm vào giỏ hàng</a>
                                 <figcaption>
-                                <h4 class="aa-product-title"><a href="ProductDetail">Áo Khoác Nam Ma Bư Thun ST38</a></h4>
+                                <h4 class="aa-product-title"><a href="/products/type?id=1">Áo Khoác Nam Ma Bư Thun ST38</a></h4>
                                 <span class="aa-product-price">79.000 VNĐ</span><span class="aa-product-price"><del>150.000 đ</del></span>
                               </figcaption>
                             </figure>                        
@@ -48,7 +48,7 @@
                               <a class="aa-product-img" href="#"><img src="/img/coat/coat2.jpg" alt="polo shirt img"></a>
                               <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Thêm vào giỏ hàng</a>
                                <figcaption>
-                                <h4 class="aa-product-title"><a href="ProductDetail">Áo Khoác Nam Ma Bư Hoodie ST11</a></h4>
+                                <h4 class="aa-product-title"><a href="/products/type?id=1">Áo Khoác Nam Ma Bư Hoodie ST11</a></h4>
                                 <span class="aa-product-price">99.000 VNĐ</span>
                               </figcaption>
                             </figure>                         
@@ -64,7 +64,7 @@
                               <a class="aa-product-img" href="#"><img src="/img/coat/coat3.jpg" alt="polo shirt img"></a>
                               <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Thêm vào giỏ hàng</a>
                                <figcaption>
-                                <h4 class="aa-product-title"><a href="ProductDetail">Áo Khoác Nam Ma Bư Thun BO01</a></h4>
+                                <h4 class="aa-product-title"><a href="/products/type?id=1">Áo Khoác Nam Ma Bư Thun BO01</a></h4>
                                 <span class="aa-product-price">99.000 VNĐ</span><span class="aa-product-price"><del>$150.000 đ</del></span>
                               </figcaption>
                             </figure>                         
@@ -78,7 +78,7 @@
                                     <a class="aa-product-img" href="#"><img src="/img/coat/coat4.jpg" alt="polo shirt img"></a>
                                     <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Thêm vào giỏ hàng</a>
                                      <figcaption>
-                                      <h4 class="aa-product-title"><a href="ProductDetail">Áo Khoác Nam Ma Bư Thun ST48</a></h4>
+                                      <h4 class="aa-product-title"><a href="/products/type?id=1">Áo Khoác Nam Ma Bư Thun ST48</a></h4>
                                       <span class="aa-product-price">99.000 VNĐ</span><span class="aa-product-price"><del>$150.000 đ</del></span>
                                     </figcaption>
                                   </figure>                         
@@ -94,7 +94,7 @@
                                     <a class="aa-product-img" href="#"><img src="/img/coat/coat5.jpg" alt="polo shirt img"></a>
                                     <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Thêm vào giỏ hàng</a>
                                      <figcaption>
-                                      <h4 class="aa-product-title"><a href="ProductDetail">Áo Khoác Nam Ma Bư Hoodie ST09</a></h4>
+                                      <h4 class="aa-product-title"><a href="/products/type?id=1">Áo Khoác Nam Ma Bư Hoodie ST09</a></h4>
                                       <span class="aa-product-price">99.000 VNĐ</span><span class="aa-product-price"><del>$150.000 đ</del></span>
                                     </figcaption>
                                   </figure>                         
@@ -108,7 +108,7 @@
                                     <a class="aa-product-img" href="#"><img src="/img/coat/coat6.jpg" alt="polo shirt img"></a>
                                     <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Thêm vào giỏ hàng</a>
                                      <figcaption>
-                                      <h4 class="aa-product-title"><a href="ProductDetail">Áo Khoác Nam KiriMaru Thun ST07</a></h4>
+                                      <h4 class="aa-product-title"><a href="/products/type?id=1">Áo Khoác Nam KiriMaru Thun ST07</a></h4>
                                       <span class="aa-product-price">99.000 VNĐ</span><span class="aa-product-price"><del>$150.000 đ</del></span>
                                     </figcaption>
                                   </figure>                         
@@ -122,7 +122,7 @@
                                     <a class="aa-product-img" href="#"><img src="/img/coat/coat7.jpg" alt="polo shirt img"></a>
                                     <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Thêm vào giỏ hàng</a>
                                      <figcaption>
-                                      <h4 class="aa-product-title"><a href="ProductDetail">Áo Khoác Nam No Style Kaki D01</a></h4>
+                                      <h4 class="aa-product-title"><a href="/products/type?id=1">Áo Khoác Nam No Style Kaki D01</a></h4>
                                       <span class="aa-product-price">99.000 VNĐ</span><span class="aa-product-price"><del>$150.000 đ</del></span>
                                     </figcaption>
                                   </figure>                         
@@ -136,7 +136,7 @@
                                     <a class="aa-product-img" href="#"><img id="imgsrc" src="/img/coat/coat8.jpg" alt="polo shirt img"></a>
                                     <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Thêm vào giỏ hàng</a>
                                      <figcaption>
-                                      <h4 class="aa-product-title"><a href="ProductDetail">Áo Khoác Nam Ma Bư Kaki KM05</a></h4>
+                                      <h4 class="aa-product-title"><a href="/products/type?id=1">Áo Khoác Nam Ma Bư Kaki KM05</a></h4>
                                       <span class="aa-product-price">99.000 VNĐ</span><span class="aa-product-price"><del>$150.000 đ</del></span>
                                     </figcaption>
                                   </figure>                         
@@ -202,7 +202,7 @@
                       </div>
                       <div class="aa-prod-view-bottom">
                         <a href="#" class="aa-add-to-cart-btn"><span class="fa fa-shopping-cart"></span>Thêm vào giỏ hàng</a>
-                        <a href="ProductDetail" class="aa-add-to-cart-btn">Chi tiết</a>
+                        <a href="/products/type?id=1" class="aa-add-to-cart-btn">Chi tiết</a>
                       </div>
                     </div>
                   </div>
@@ -241,12 +241,13 @@
                    <div class="aa-sidebar-widget">
                      <h3>Mục</h3>
                      <ul class="aa-catg-nav">
-                       <li><a href="/products/type?id=1">Áo thun</a></li>
-                       <li><a href="/products/type?id=1">Áo khoác</a></li>
-                       <li><a href="/products/type?id=1">Áo sơ mi</a></li>
-                       <li><a href="/products/type?id=1">Quần</a></li>
-                       <li><a href="/products/type?id=1">Giày</a></li>
-                       <li><a href="/products/type?id=1">Balo</a></li>
+                      <%
+                      listCategory.forEach(category=>{
+                        %><li>
+                          <a href="/products/type?id=<%= category['Id'] %>" ><%= category['name'] %></a>
+                        </li><%
+                      });
+                      %>
                      </ul>
                    </div>
                    <!-- single sidebar -->
