--- a/main-page/views/home/products.ejs
+++ b/main-page/views/home/products.ejs
@@ -18,6 +18,10 @@
                     <div class="tab-pane fade in active" id="shirt">
                       <ul class="aa-product-catg">
                         <!-- start single product item -->
+                        <% 
+                          console.log(productOfPromo);
+                         
+                        %>
                         <li>
                           <figure>
                             <a class="aa-product-img" ><img src="/img/t-shirt/T-Shirt-U.jpg" alt="polo shirt img"></a>
